src/App.css
@font-face {
  font-family: 'Crayon';
  src: url('./fonts/colored-crayons-font/ColoredCrayons-7wPR.ttf') format('truetype');
}

@keyframes zoomIn {
  from {
    transform: scale(0.5) translateX(-50%);
    bottom: -25%;
  }
  to {
    transform: scale(1) translateX(-50%);
    bottom: 0%;
  }
}

@keyframes rotateR {
  from {
    transform: rotate(0deg);
    
  }
  to {
    transform: rotate(-145deg);
  }
}

@keyframes rotateL {
  from {
    transform: rotate(0deg) scaleX(-1);
  }
  to {
    transform: rotate(145deg) scaleX(-1);
  }
}

@keyframes rotateStar {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes fadeInOut {
  0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

.flicker{
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 0;
  animation: fadeInOut 5s infinite;
  z-index: 0;
  /* repeat */
}

.stars1{
  animation-delay: 0s;
  width: 100%;
  /* background-size: cover; */
  background-repeat: repeat;
  /* background-size: cover; */
}

.stars2{
  animation-delay: 2.5s;
  width: 100%;
  /* background-size: cover; */
  background-repeat: repeat;
  /* background-size: cover; */
}

html {
  scroll-behavior: smooth;
}

.whole{
  min-height: 100%;
  display: flex;
  min-height: 100vh;
}

.left{
  position: sticky;
  display: flex;
  flex-direction: column;
  width: 9rem;
  height: 100vh;
  z-index: 10000;
  top: 0;
}

.leftbar{
  display: flex;
  align-self: flex-start;
  min-width: 100%;
  min-height: 90%;
  border-radius: 2.5rem 0 0 0;
}

.leftbarinner{
  background-color: #94949493;
  display: flex;
  align-self: flex-start;
  min-width: 90%;
  min-height: 100%;
  flex-grow: 1;
  margin-right: 5%;
  border-radius: 5rem 5rem 0rem 5rem;
}

.leftbarinnerinner{
  flex-direction: column;
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-around;
}

.oval {
  display: flex;
  width: 90%;
  border-radius: 5rem 5rem 5rem 5rem;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  gap: 1rem;
}

.line {
  width: 80%;
  height: 2px;
  background-color: #47474b25;
}

.border {
  border-width: 1px;
  border-color: #e8e8e8;
  border-style: solid;
}

.linkedin {
  width: 95%;
  aspect-ratio: 1/1;
  border-radius: 50%;
  overflow: hidden;
}

.kitty {
  width: 100%;
  height: 100%;
}

.lefttoggle{
  display: flex;
  min-width: 100%;
  min-height: 10%;
  align-self: flex-end;
  border-radius: 0 0 0 2.5rem;
}

.lefttoggle2{
  background-color: #94949493;
  display: flex;
  min-width: 95%;
  min-height: 100%;
  margin-right: 5%;
  align-self: flex-end;
  border-radius: 2.5rem 0 0 0;
}

.lefttoggle3{
  background-color: white;
  display: flex;
  min-height: 100%;
  min-width: 100%;
  border-radius: 5rem 5rem 0 5rem;
  justify-content: center;
  align-items: center;
}

/* .lighttoggle{
  background-color: #383A40;
  display: flex;
  width: 50%;
  height: 80%;
  border-radius: 5rem 5rem 5rem 5rem;
} */

.right{
  display: flex;
  flex-direction: column;
  position: relative;
  flex-grow: 1;
  height: 100vh;
}

.power{
  position: absolute;
  width: 100%;
  height: 100%;
  align-items: center;
}

.power1{
  height:4%;
}

.create{
  position: absolute;
  width: 95%;
  height: auto;
  top: 55%;
  left: 45%;
  transform: translateX(-45%);
  max-width: 90rem;
  z-index: 2;
}

.human{
  position: absolute;
  animation: zoomIn 2s ease-in-out;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  display: block;
  width: auto;
  height: 95%; 
  margin: 0 auto;
  object-fit: contain;
  z-index: 1000;
}

.header{
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

h1{
  font-family: 'Crayon';
  font-size: 5rem;
}

.icon1 {
  display: flex;
  gap: 10rem;
}


.icon2 { /* house*/
  width: 68%;
  z-index: 100000;
  /* position: relative; */
}

.wheels {
  align-items: center;
  justify-content: center;
  max-width: 100%;
  display: flex;
  padding-top: 5%;
  padding-left: 5%;
  padding-right: 5%;
  z-index: 2;
}

.prettycircle{
  margin: auto;
  box-sizing: border-box;
  animation: rotateR 2s ease-in-out forwards;
  width: 20%;
  z-index: 2;
}

.prettycircleflip{
  margin: auto;
  box-sizing: border-box;
  animation: rotateL 2s ease-in-out forwards;
  width: 20%;
  z-index: 2;
}

.paddingmid{
  flex-grow: 2;
  box-sizing: border-box;
}

.rectangle{
  position: relative;
  height: 60vh;
  z-index: 100000000;
  display: flex;
}

.footer-container{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
  align-items: center;
}

.social-icons{
  display: flex;
  gap: 1rem;
}

